--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=0.8,maximum-scale=1,user-scalable=yes">
     <link rel="icon" href="favicon.ico">
-    <title>vue3</title>
+    <title>BYDSentry Magic Manager Manual</title>
 
     <!-- קבצי CSS -->
     <link href="static/css/chunk-vendors.34a2368a.css" rel="stylesheet">
